--- a/src/main/resources/templates/ThesisDetail.html
+++ b/src/main/resources/templates/ThesisDetail.html
@@ -68,9 +68,8 @@
                     </div>
                     <div class="panel-body">
                             <div class="form-group">
-                                <div class="row">
-                                    <label  class="col-md-2 control-label col-md-offset-4 h3">论文标题:</label>
-                                    <div class="col-md-4 h3">
+                                <div class="row text-center">
+                                    <div class="h3 text-center">
                                         <p th:text="${thesisinf.getThesisTitle()}"></p>
                                     </div>
                                 </div>
