--- a/src/main/resources/templates/ThesisListResult.html
+++ b/src/main/resources/templates/ThesisListResult.html
@@ -65,9 +65,8 @@
                 <div class="col-md-8 col-md-offset-2" >
                     <br>
                     <h3 th:if="${thesisList.size()==0}" class="text-center" style="margin-top: 100px;"> 未查询到结果！</h3>
-                    <div class="panel panel-warning" th:each="list:${thesisList}" th:if="${thesisList.size()!=0}">
-                        <a th:href="@{'/ThesisDetail/'+${list.getThesisId()}}">
-
+                    <div class="panel panel-warning" th:each="list,listStat:${thesisList}" th:if="${thesisList.size()!=0}">
+                        <a th:href="@{'/ThesisDetail/'+${urltmp.get(listStat.index)}}">
                             <div class="panel-heading panel-warning">
                                 <h3 class="panel-title text-center" th:text="${list.getThesisId()}"></h3>
                             </div>
