--- a/src/main/resources/templates/EditThesis.html
+++ b/src/main/resources/templates/EditThesis.html
@@ -70,16 +70,16 @@
                         <form role="form" method="post" th:action="@{AddThesisSubmit}" name="myform1">
                             <div class="form-group">
                                 <div class="row">
-                                    <label for="input1" class="col-md-1 control-label col-md-offset-3">论文标题</label>
                                     <div class="col-md-4">
                                         <input class="form-control" id="input1" name="input1" type="text" placeholder="">
                                     </div>
+                                    <button for="input1" class="col-md-1 control-label col-md-offset-3">论文标题</button>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="row">
-                                    <label for="input2" class="col-md-1 control-label">文章编号</label>
                                     <div class="col-md-2"><input class="form-control" type="text"  id="input2" name="input2"></div>
+                                    <button for="input2" class="col-md-1 control-label">文章编号</button>
                                     <label for="input3" class="col-md-1 control-label">作者一</label>
                                     <div class="col-md-2"><input class="form-control" type="text"  id="input3" name="input3"></div>
                                     <label for="input4" class="col-md-1 control-label">作者二</label>
