--- a/src/main/resources/templates/ThesisDetail.html
+++ b/src/main/resources/templates/ThesisDetail.html
@@ -65,7 +65,6 @@
                 <div class="panel panel-warning ">
                     <div class="panel-heading text-center">
                         <h3 class="panel-title ">论文详情</h3>
-                        <a th:href="@{GoToEditThesis}"><button class="btn-warning btn">编辑</button></a>
                 </div>
                     <div class="panel-body">
                             <div class="form-group">
@@ -75,6 +74,10 @@
                                     </div>
                                 </div>
                             </div>
+                        <div style="margin-left:68%;">
+                            <a th:href="@{'/EditThesis/'+${ThesistmpId}}"><button class="btn-warning btn">编辑</button></a>
+                        </div>
+                        <br/>
                             <div class="form-group">
                                 <div class="row">
                                     <label class="col-md-1 control-label">文章编号</label>
