可以添加新的软件著作权

--- a/src/main/resources/templates/AddCopyright.html
+++ b/src/main/resources/templates/AddCopyright.html
@@ -90,9 +90,10 @@
                                     <label for="input5" class="col-md-2 control-label">作者三</label>
                                     <div class="col-md-2"><input class="form-control" type="text"  id="input5" name="input5"></div>
                                 </div>
+                                <br>
                                 <div class="row">
                                     <label for="input6" class="col-md-2 control-label">发表时间</label>
-                                    <div class="col-md-2"><input class="form-control" type="text"  id="input6" name="input6"></div>
+                                    <div class="col-md-4"><input class="form-control" type="text"  id="input6" name="input6" placeholder="请按照’2000-01-10‘格式输入"></div>
                                 </div>
                                 <br>
                                 <div class="row">
