实现已登记的软件著作删除

--- a/src/main/resources/templates/MySoftwareCopyright.html
+++ b/src/main/resources/templates/MySoftwareCopyright.html
@@ -81,7 +81,7 @@
                                 <button type="button" class="btn btn-warning"><span
                                         aria-hidden="true"></span> Add</button>
                             </a>
-                            <button type="button" id="remove" class="btn btn-warning" onclick="deleteLogic();"><span
+                            <button type="button" id="remove" class="btn btn-warning" onclick="deleteCopyright();"><span
                                     aria-hidden="true"></span> Delete
                             </button>
                         </div>
@@ -140,37 +140,31 @@
         /**
          * 批量删除
          */
-        function deleteLogic() {
-
+        function deleteCopyright() {
             var checkNum = $("input[name='optionsCheckboxinline']:checked").length;
-
             if(checkNum==0){
                 alert("至少选择一项");
                 return;
             }
-
             if(confirm("确定要删除吗？")){
-                var checkList = new Array();
-                $("input[name='checkId']:checked").each(function () {
-                    checkList.push($(this).val())
-                });
-            }
-
-            $.ajax({
-                url:"/deleteAll",
-                type:"post",
-                data:{
-                    checkList:checkList.toString()
-                },
-                datatype:"json",
-                success:function (data) {
-                    location.reload();
-                    alert("删除成功！")
-                },
-                error:function (msg) {
-                    alert("删除失败！")
+                var bookidlist =new Array();
+                var dd = '';
+                var radio = document.getElementsByName("optionsCheckboxinline");
+                for (var i = 0; i < radio.length; i++) {
+                    if (radio[i].checked == true) {
+                        dd = radio[i].value;
+                        bookidlist.push(dd);
+                    }
                 }
-            })
+            }
+                $.ajax({
+                    url: "/deleteCopyright?params="+bookidlist , // 你的请求链接
+                    success : function(data) {
+                        console.log("data==="+data);
+                        alert("删除成功");
+                        location.reload();
+                    }
+                });
         }
     </script>
 
