--- a/src/main/resources/templates/AddThesis.html
+++ b/src/main/resources/templates/AddThesis.html
@@ -118,7 +118,7 @@
                                 <div onclick="checksubmit();" class="btn btn-warning"> 提交</div>
                                 </div>
                                 <div class="col-md-2 ">
-                                    <a th:href="@{MyThesis}" ><div class="btn btn-warning"> 取消</div></a>
+                                    <a th:href="@{/MyThesis}" ><div class="btn btn-warning"> 取消</div></a>
                                 </div>
                             </div>
 
