--- a/src/main/resources/templates/ThesisDetail.html
+++ b/src/main/resources/templates/ThesisDetail.html
@@ -37,12 +37,12 @@
             <!-- mainmenu begin -->
             <nav  class="navbar" role="navigation" style="margin-bottom: 0">
                 <ul id="mainmenu" class="navbar-left">
-                    <li><a class="J_menuItem black" th:href="@{/index}">Home</a></li>
-                    <li><a class="J_menuItem" th:href="@{/MyThesis}">My Thesis</a></li>
-                    <li><a class="J_menuItem" th:href="@{/MySoftwareCopyright}">My Software Copyright</a></li>
-                    <li><a class="J_menuItem" th:href="@{/subjectManagement}">My Project</a></li>
-                    <li><a class="J_menuItem" th:href="@{/userManagement}">Management</a></li>
-                    <li><a class="J_menuItem" th:href="@{/}">Report Statistics</a></li>
+                    <li><a class="J_menuItem black" th:href="@{/index}" shiro:hasAnyRoles ="student,teacher,Administration">Home</a></li>
+                    <li><a class="J_menuItem" th:href="@{/MyThesis}" shiro:hasAnyRoles="teacher,Administration">My Thesis</a></li>
+                    <li><a class="J_menuItem" th:href="@{/MySoftwareCopyright}" shiro:hasAnyRoles="teacher,Administration">My Software Copyright</a></li>
+                    <li><a class="J_menuItem" th:href="@{/subjectManagement}" shiro:hasAnyRoles="teacher,Administration">My Project</a></li>
+                    <li><a class="J_menuItem" th:href="@{/userManagement}" shiro:hasRole="Administration">Management</a></li>
+                    <li><a class="J_menuItem" th:href="@{/}" shiro:hasRole="Administration">Report Statistics</a></li>
                     <li><a class="J_menuItem" th:text="${session.user.getUserName()}">谢文仲</a></li>
                     <li><a class="J_menuItem" th:href="@{logout}">退出</a></li>
                 </ul>
@@ -74,7 +74,7 @@
                                     </div>
                                 </div>
                             </div>
-                        <div style="margin-left:68%;">
+                        <div style="margin-left:68%;"  th:if="${thesisinf.getAuthor1()}==${session.user}">
                             <a th:href="@{'/EditThesis/'+${ThesistmpId}}"><button class="btn-warning btn">编辑</button></a>
                         </div>
                         <br/>
