搜索  id查询结果为0

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -134,8 +134,8 @@
 
     }
     function checksubmit2() {
-        var input1= $("[name='input1']").val();
-        if($.trim(input1)==""||$.trim(input2)==""||$.trim(input3)==""){
+        var input2= $("[name='input2']").val();
+        if($.trim(input2)==""){
             alert("查询软件著作不能为空！");
         }else{
             form2.submit();
