--- a/src/main/resources/templates/indexM.html
+++ b/src/main/resources/templates/indexM.html
@@ -43,7 +43,7 @@
                                 </span>
                         </a>
                     </div>
-                    <div class="logo-element">教参管理系统
+                    <div class="logo-element">科研档案管理系统
                     </div>
                 </li>
 
@@ -69,7 +69,7 @@
                 </li>
                 <li>
                     <a class="J_menuItem" href="../../bookManagement">
-                        <i class="fa fa-shopping-cart"></i>
+                        <i class="fa fa-file-o"></i>
                         <span class="nav-label">著作管理</span>
                     </a>
                 </li>
