--- a/src/main/resources/templates/CopyrightListResult.html
+++ b/src/main/resources/templates/CopyrightListResult.html
@@ -24,7 +24,6 @@
     <!-- revolution slider -->
     <link rel="stylesheet" href="../css/rev-settings.css" type="text/css">
     <link rel="stylesheet" href="../css/login.css" type="text/css">
-
 </head>
 
 <body id="homepage" style="overflow:hidden">
@@ -57,11 +56,36 @@
      </header>
     
         <!-- header close -->
-
-
         <!-- content begin -->
         <div id="content">
-mm
+            <div class="row">
+                <h3 class="text-center">软件著作搜索结果</h3>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3" >
+                    <br>
+                    <h3 th:if="${copyrightList.size()==0}" class="text-center" style="margin-top: 100px;"> 未查询到结果！</h3>
+                    <div class="panel panel-warning" th:each="list:${copyrightList}" th:if="${copyrightList.size()!=0}" >
+                        <a th:href="@{'/CopyrightDetail/'+${list.getBookId()}}">
+
+                            <div class="panel-heading panel-warning">
+                                <h3 class="panel-title text-center" th:text="${list.getBookId()}"></h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="row">
+                                    <div class="col-md-4 col-md-offset-3 panel-title">
+                                        <p th:text="${list.getBookName()}">名称</p>
+                                    </div>
+                                    <div class="col-md-2 panel-title">
+                                        <p th:text="${list.getAuthor1().getUserName()}">作者1名称</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
+            </div>
 
 </div>
 
@@ -74,7 +98,6 @@ mm
     ================================================== -->
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-
 
 </body>
 </html>
